# treehacks2024

./: .gitignore  README.md  email_chat_bot.py
backend/: .tog.py.swp  hello.py  model.py  pyproject.toml  tog.py  typescript
flask/: email_chat_bot.py
flask-app/llama_index/nutrition/: nutrition_chatbot.py
flask-app/react/split/: package-lock.json  package.json
flask-app/react/split/src/Components/: questions.jsx
frontend/: package-lock.json  package.json
frontend/src/app/: .page.tsx.swp  page.module.css  page.tsx
frontend/src/components/: MultiPlayer.js
frontend/src/pages/example/: index.tsx
