[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Felix Haba <felixhr2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
